--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,60 @@
-<html><head><title>hello</title></head><body><h1>Hi</h1></body></html>
+<!DOCTYPE html><!--[if lt IE 7]><html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="en"><![endif]--><!--[if IE 7]><html class="no-js lt-ie9 lt-ie8" lang="en"><![endif]--><!--[if IE 8]><html class="no-js lt-ie9" lang="en"><![endif]--><!--[if gt IE 8]><!-->
+<html lang="pl" ng-app="app" class="no-js">
+  <!-- <![endif]-->
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width" initial-scale="1.0">
+    <meta name="description" content="">
+    <meta name="author" content="Rafał Pastuszak, paprikka.pl">
+    <meta name="robots" content="noindex">
+    <title ng-bind-template="{{pageTitle}}"></title>
+    <link rel="stylesheet" href="http://bootswatch.com/cerulean/bootstrap.css">
+    <link rel="stylesheet" href="/css/app.css">
+    <script>
+      (function() {
+        var method;
+        var noop = function noop() {};
+        var methods = [
+            'assert', 'clear', 'count', 'debug', 'dir', 'dirxml', 'error',
+            'exception', 'group', 'groupCollapsed', 'groupEnd', 'info', 'log',
+            'markTimeline', 'profile', 'profileEnd', 'table', 'time', 'timeEnd',
+            'timeStamp', 'trace', 'warn'
+        ];
+        var length = methods.length;
+        var console = (window.console = window.console || {});
+        
+        while (length--) {
+            method = methods[length];
+            
+            // Only stub undefined methods.
+            if (!console[method]) {
+                console[method] = noop;
+            }
+        }
+      }());
+    </script><!--[if lte IE 7]>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/json2/20110223/json2.js"></script><![endif]--><!--[if lte IE 8]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
+    <script src="/scripts/modernizr.js"></script>
+    <script src="/scripts/ie.js"></script>
+    <script src="/js/vendor.js"></script>
+    <script src="/js/app.js"></script>
+  </head>
+  <body ng-controller="AppCtrl">
+    <div class="wrapper">
+      <div class="navbar navbar-fixed-top">
+        <div class="navbar-inner">
+          <div class="container"><a href="#" class="brand">Page</a></div>
+        </div>
+      </div>
+      <div ng-view></div>
+      <div class="push"></div>
+    </div>
+    <footer class="footer">
+      <div class="container">
+        <p><small>&copy; Page.com 2</small></p>
+      </div>
+    </footer>
+  </body>
+</html>
