--- a/public/index.html
+++ b/public/index.html
@@ -23,10 +23,10 @@
         ];
         var length = methods.length;
         var console = (window.console = window.console || {});
-        
+
         while (length--) {
             method = methods[length];
-            
+
             // Only stub undefined methods.
             if (!console[method]) {
                 console[method] = noop;
@@ -36,7 +36,7 @@
     </script><!--[if lte IE 7]>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/json2/20110223/json2.js"></script><![endif]--><!--[if lte IE 8]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
-    <script src="/scripts/modernizr.js"></script>
+    <script src="/js/modernizr.js"></script>
     <script src="/js/vendor.js"></script>
     <script src="/js/app.js"></script>
   </head>
